# SP

./: CMakeLists.txt
include/: IComponent.h
include/components/: AboutDialog.h  MenuBar.h  OverlayWindow.h
include/utils/: ComponentManager.h  IdleMonitor.h
include/win32/: HashMapMessageHandler.h  MessageHandler.h  Win32Window.h
src/: Win32Window.cpp  main.cpp
src/components/: AboutDialog.cpp  MenuBar.cpp  OverlayWindow.cpp
src/utils/: ComponentManager.cpp  IdleMonitor.cpp
